--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Task" asp-action="GetAllTasks">Tasks</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="/Task">Tasks</a>
+                            @* <a class="nav-link text-dark" asp-controller="Task" asp-action="GetAllTasks">Tasks</a> *@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/dashboard">Dashboard</a>
